Fixed layout issue with sidebar and adding blur effect to it. Minor adjustments in the Contact component.

--- a/src/App.css
+++ b/src/App.css
@@ -42,42 +42,11 @@ html {
 	font-weight: 600;
 }
 
-.hide-mobile-nav {
-	position: absolute;
-	width: 100%;
-	height: 100vh;
-	overflow-y: visible;
-	top: 100vh;
-	left: 0;
-	background: #495057;
-	z-index: 10;
-	display: flex;
-	flex-direction: column;
-	justify-content: space-evenly;
-	transition: all 0.4s ease-in-out;
-	align-items: center;
-}
-
-.show-mobile-nav {
-	position: absolute;
-	overflow-y: hidden;
-	width: 100vw;
-	height: 100vh;
-	top: 0;
-	left: 0;
-	font-size: 20px;
-	z-index: 10;
-	display: flex;
-	flex-direction: column;
-	justify-content: space-evenly;
-	transition: all 0.4s ease-in-out;
-	align-items: center;
-}
-
 .scroll-btn:hover {
-    background-color: gray; 
+	background-color: gray;
 }
 
 #navbar-js {
 	transition: top 0.3s;
 }
+
