--- a/src/components/Nav/Nav.css
+++ b/src/components/Nav/Nav.css
@@ -9,6 +9,35 @@
     transition: all 0.8s;
 }
 
+
+#desktopUl li:first-child {
+  margin-right: auto;
+}
+
+.hide-mobile-nav {
+display: none;
+}
+
+
+
+.show-mobile-nav {
+	position: fixed;
+	width: 50vw;
+	height: 100vh;
+	top: 0; 
+	right: 0;
+	font-size: 20px;
+	z-index: 40;
+  background-color: rgba(105, 103, 103, 0);
+  backdrop-filter: blur(15px);
+	transition: all 0.3s ease-in-out;
+	display: flex;
+	flex-direction: column;
+	align-items: center;
+	justify-content: space-evenly;
+}
+
+
 /*!
  * Hover.css (http://ianlunn.github.io/Hover/)
  * Version: 2.3.2
